objects/ssot__PromotionStageTemplate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Stage Template Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionTemplate__c</fullName>
        <label>Promotion Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredPartyJournalSubtype__c</fullName>
        <label>Referred Party Journal Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerJournalSubType__c</fullName>
        <label>Referrer Journal Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardRecipientType__c</fullName>
        <label>Reward Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831696586_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStageTemplate_ReferrerJourn_rel</label>
        <referenceTo>ssot__LoyaltyJournalType__dlm</referenceTo>
        <relationshipLabel>PromotionStageTemplate_ReferrerJourn_rel</relationshipLabel>
        <relationshipName>rel_1729831696586_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831700349_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStageTemplate_ReferredParty_rel</label>
        <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
        <relationshipLabel>PromotionStageTemplate_ReferredParty_rel</relationshipLabel>
        <relationshipName>rel_1729831700349_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832289270_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStageTemplate_PromotionTemp_rel</label>
        <referenceTo>ssot__PromotionTemplate__dlm</referenceTo>
        <relationshipLabel>PromotionStageTemplate_PromotionTemp_rel</relationshipLabel>
        <relationshipName>rel_1729832289270_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>